--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>-It is a fictional story</p>
                 <br>
                 <h2>What suprised you?did you have a ha-ha movement?</h2>
-                <p>-I was suprised when binya gave her umbrella to Ram bharosa . Although in the whole story she denied to give him the umbrella but in the end when she saw that everyone was insulting him to stel her umbrella . she felt guilty a gave herthe blue umbrella to him   </p>
+                <p>-I was suprised when binya gave her umbrella to Ram bharosa . Although in the whole story she denied to give him the umbrella but in the end when she saw that everyone was insulting him for stealing her umbrella . she felt guilty a gave her the blue umbrella to him   </p>
                 <br>
                 <h2>What part attracts you the most?</h2>
                 <p>-When binya risk her the life for the umbrella that part attracts me the most as it shows her love for the umbrella</p>
@@ -51,7 +51,7 @@
                <p>-Chapter 6-7 are the key points of the story .I liked the last part the most as in that Ram bharosa gave a beautiful gift  to binya in return of the her beautiful umbrella  </p>
                <br>
                <h3>What is missing ? which part would you like to modify?  </h3>
-               <p>- In my opinion in some parts the ending was missing . I would like to modify the part where Binya risked her life for her umbrella . i think the finishing of that was missing. </p>
+               <p>- In my opinion in some parts the ending was missing . I would like to modify the part where Binya risked her life for her umbrella . I think the finishing of that was missing. </p>
                <br>
                <h3>What are you own reaction and considered opinion Regarding the work </h3>
                <p>- This is a very good book that tells us that everyone loves there belongings more than anyone else but sharing them to make others happy is a very good thing .
