--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-     <script src="main.js"></script>
+     
     </head>
     <body>
         <div class="topnav">
@@ -25,6 +25,8 @@
         <br>
         <br>
             <section id="section2">
+                <br>
+                <br>
                 <h1>About the Book</h1>
                 <div id="line"></div>
                 <p>As soon as Binya saw the beautiful blue silk umbrella, she wanted it.<br> She wanted it so badly that she was willing to give her lucky leopard's claw pendant in exchange. <br>
@@ -36,7 +38,7 @@
             <br>
             <br>
             <section id="book_report">
-                <h1>BOOK REPORT</h1>
+                <br><br><h1>BOOK REPORT</h1>
                 <p id="first_p">'The Blue Umbrella' is a beautiful novel written by Ruskin bond . The story revolves around a village girl binya and her beautiful blue umbrella.</p>
                 <h2>What is the genre?</h2>
                 <p>-It is a fictional story</p>
